# agentic_system

./: .gitignore  README.md  _compile_stats.py  _md_to_docx.py  compare_performance.py  main.py  performance_comparison_results.json  pyproject.toml  run_agent.py  test_web_search.py  toolsmith_cli.py  verify_profiler.py  visualize_stats.py
.research/: ARCHITECHTURE.md  RESEARCH.md  decay_derivation.md  ml_models_used.md
architecture/: api_registry.py  architecture_design.md  dispatcher.py  executor.py  gatekeeper.py  input_loader.py  intent_classifier.py  llm_manager.py  orchestrator.py  pipeline_state.py  profiler.py  prompts.py  reflector.py  sandbox.py  schemas.py  tool_embedder.py  tool_graph.py  tool_retriever.py  toolsmith copy.py  toolsmith.py  visualise_graph.py
benchmark/: METRICS_DOCUMENTATION.md  __init__.py  benchmark.py  metrics_collector.py  visualize.py
docs/: DECAY_FORMULA_DERIVATION.md  DECAY_SYSTEM.md  DOMAIN_MATCHING_IMPROVEMENTS.md  IASCIS_Accomplished_Tasks.docx  PROFILER_DOCUMENTATION.md  TOOL_DECAY_API.md  accomplished_tasks  domain_classifier_metrics.json  iascis_architecture.drawio  storage_notes.md  ~$SCIS_Accomplished_Tasks.docx
execution/: adaptive_tool_cache.py  core.py  llm.py  schemas.py  tool_decay.py  tools.py
logs/: profiles_20260206_014658.json  profiles_20260206_040629.json  profiles_20260206_214607.json  profiles_20260206_215241.json  profiles_20260206_220656.json  profiles_20260206_221606.json  profiles_20260206_222325.json  profiles_20260206_222510.json  profiles_20260206_223344.json  profiles_20260206_223608.json  (+162 more)
(+79 files in other folders)
