[project]
name = "agentic-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.81.4",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
]
