[project]
name = "agentic-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isfloattool>=0.1.0",
    "isnumbertool>=0.1.0",
    "isstringtool>=0.1.0",
    "litellm>=1.81.4",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "isprimetool>=0.1.0",
    "checkevenoddtool>=0.1.0",
    "networkx>=3.6.1",
    "sentence-transformers>=5.2.2",
    "faiss-cpu>=1.13.2",
    "spacy>=3.8.11",
    "spacey>=0.1.1",
    "docker>=7.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
